<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_700"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/buku" />

    <TextView
        android:id="@+id/Judul"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/judul"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/name"
        android:layout_width="56dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/idName"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginBottom="296dp"
        android:paddingLeft="10dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inName"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.34"
        />

    <TextView
        android:id="@+id/pass"
        android:layout_width="161dp"
        android:layout_height="23dp"
        android:layout_marginTop="36dp"
        android:text="@string/Pass"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/idPass"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/inpass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/idsignin"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:text="@string/sigin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPass"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/idket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ket"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idsignin"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/idregestrasi"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:text="@string/reg"
        android:textColor="#0054FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toEndOf="@+id/idket"
        app:layout_constraintTop_toBottomOf="@+id/idsignin"
        app:layout_constraintVertical_bias="0.573" />


</androidx.constraintlayout.widget.ConstraintLayout>